Adicionar página obrigado pós-cadastro para Google Ads

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   
-  <!-- Meta Pixel Code -->
+  <!-- Facebook Pixel Code -->
   <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -43,10 +43,13 @@
   fbq('init', '831831922997094');
   fbq('track', 'PageView');
   </script>
+  <!-- Página obrigado ativa -->
   <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=831831922997094&ev=PageView&noscript=1"
   /></noscript>
   <!-- End Meta Pixel Code -->
+  
+  <!-- Comentário para forçar novo commit e deploy -->
   
   <style>
 /* Cole este novo CSS substituindo TODO o conteúdo dentro da tag <style> */
