--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
   /></noscript>
   <!-- End Meta Pixel Code -->
   
-  <!-- Comentário para forçar novo commit e deploy -->
+  <!-- Google Ads Tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17716037831"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-17716037831');
+  </script>
+  <!-- End Google Ads Tag -->
   
   <style>
 /* Cole este novo CSS substituindo TODO o conteúdo dentro da tag <style> */
@@ -1440,7 +1448,7 @@ window.openStripeCheckout = function() {
         user.password=await Auth.hash(password); user.pwVersion='sha256'; SafeStorage.set(AUTH_USERS_KEY,JSON.stringify(users));
       }
       SafeStorage.set(AUTH_CURRENT_KEY,JSON.stringify(user)); if(typeof fbq!=='undefined'){fbq('track','Lead',{content_name:'Login PadariaPro',user_plan:user.plan||'free'})}; UI.toast(`Bem-vindo, ${user.name||'usuário'}!`,'success'); setTimeout(()=>{ Auth.hide(); Router.replace('dashboard'); },500);},
-    async register(){const name=document.getElementById('register-name').value.trim(); const email=document.getElementById('register-email').value.trim(); const password=document.getElementById('register-password').value; const confirm=document.getElementById('register-password-confirm').value; if(!name||!email||!password||!confirm){UI.toast('Preencha todos os campos','error');return} if(!Auth.validateEmail(email)){UI.toast('Email inválido','error');return} if(password.length<6){UI.toast('Senha deve ter mínimo 6 caracteres','error');return} if(password!==confirm){UI.toast('Senhas não conferem','error');return} const users=JSON.parse(SafeStorage.get(AUTH_USERS_KEY,'[]')||'[]'); if(users.find(u=>u.email===email)){UI.toast('Email já registrado','error');return} const passwordHash=await Auth.hash(password); const newUser={id:Date.now(),name,email,password:passwordHash,pwVersion:'sha256',plan:'free',createdAt:new Date().toISOString()}; users.push(newUser); SafeStorage.set(AUTH_USERS_KEY,JSON.stringify(users)); SafeStorage.set(AUTH_CURRENT_KEY,JSON.stringify(newUser)); if(typeof fbq!=='undefined'){fbq('track','CompleteRegistration',{content_name:'PadariaPro - Novo Usuário',status:'free'})}; UI.toast('Conta criada com sucesso!','success'); setTimeout(()=>{ Auth.hide(); window.location.href='/?cadastro=sucesso'; },500);},
+    async register(){const name=document.getElementById('register-name').value.trim(); const email=document.getElementById('register-email').value.trim(); const password=document.getElementById('register-password').value; const confirm=document.getElementById('register-password-confirm').value; if(!name||!email||!password||!confirm){UI.toast('Preencha todos os campos','error');return} if(!Auth.validateEmail(email)){UI.toast('Email inválido','error');return} if(password.length<6){UI.toast('Senha deve ter mínimo 6 caracteres','error');return} if(password!==confirm){UI.toast('Senhas não conferem','error');return} const users=JSON.parse(SafeStorage.get(AUTH_USERS_KEY,'[]')||'[]'); if(users.find(u=>u.email===email)){UI.toast('Email já registrado','error');return} const passwordHash=await Auth.hash(password); const newUser={id:Date.now(),name,email,password:passwordHash,pwVersion:'sha256',plan:'free',createdAt:new Date().toISOString()}; users.push(newUser); SafeStorage.set(AUTH_USERS_KEY,JSON.stringify(users)); SafeStorage.set(AUTH_CURRENT_KEY,JSON.stringify(newUser)); if(typeof fbq!=='undefined'){fbq('track','CompleteRegistration',{content_name:'PadariaPro - Novo Usuário',status:'free'})}; if(typeof gtag!=='undefined'){gtag('event','conversion',{'send_to':'AW-17716037831','value':10.0,'currency':'BRL'})}; UI.toast('Conta criada com sucesso!','success'); setTimeout(()=>{ Auth.hide(); window.location.href='/?cadastro=sucesso'; },500);},
     async hash(str){try{const enc=new TextEncoder(); const buf=await crypto.subtle.digest('SHA-256',enc.encode(str)); const arr=[...new Uint8Array(buf)]; return arr.map(b=>b.toString(16).padStart(2,'0')).join('');}catch(e){console.warn('WebCrypto indisponível, fallback inseguro',e); return str}}
     ,logout(){try{localStorage.removeItem(AUTH_CURRENT_KEY)}catch(e){console.warn('SafeStorage.remove error',e)} UI.toast('Logout realizado','success'); setTimeout(()=>{Auth.show();},300);}
   }
